--- a/public/app.css
+++ b/public/app.css
@@ -4984,7 +4984,7 @@
     --bs-white: #fff;
     --bs-gray: #6c757d;
     --bs-gray-dark: #343a40;
-    --bs-primary: #ec1e64;
+    --bs-primary: #78D54B;
     --bs-secondary: #10495c;
     --bs-success: #198754;
     --bs-info: #0dcaf0;
@@ -5114,7 +5114,7 @@
     top: -.5em; }
   
   a {
-    color: #ec1e64;
+    color: #78D54B;
     text-decoration: underline; }
     a:hover {
       color: #bd1850; }
@@ -5546,8 +5546,8 @@
   
   .btn-primary {
     color: #000;
-    background-color: #ec1e64;
-    border-color: #ec1e64; }
+    background-color: #78D54B;
+    border-color: #78D54B; }
     .btn-primary:hover {
       color: #000;
       background-color: #ef407b;
@@ -5569,8 +5569,8 @@
         box-shadow: 0 0 0 0.25rem rgba(201, 26, 85, 0.5); }
     .btn-primary:disabled, .btn-primary.disabled {
       color: #000;
-      background-color: #ec1e64;
-      border-color: #ec1e64; }
+      background-color: #78D54B;
+      border-color: #78D54B; }
   
   .fade {
     -webkit-transition: opacity 0.15s linear;
@@ -5730,7 +5730,7 @@
     .dropdown-item.active, .dropdown-item:active {
       color: #fff;
       text-decoration: none;
-      background-color: #ec1e64; }
+      background-color: #78D54B; }
     .dropdown-item.disabled, .dropdown-item:disabled {
       color: #6c757d;
       pointer-events: none;
@@ -5864,8 +5864,8 @@
     .list-group-item.active {
       z-index: 2;
       color: #fff;
-      background-color: #ec1e64;
-      border-color: #ec1e64; }
+      background-color: #78D54B;
+      border-color: #78D54B; }
     .list-group-item + .list-group-item {
       border-top-width: 0; }
       .list-group-item + .list-group-item.active {
@@ -6332,7 +6332,7 @@
     text-align: center !important; }
   
   .text-primary {
-    color: #ec1e64 !important; }
+    color: #78D54B !important; }
   
   .text-danger {
     color: #dc3545 !important; }
@@ -6407,9 +6407,9 @@
           text-decoration: none !important;
           color: rgba(0, 0, 0, 0.7); }
           .site-nav .site-navigation .site-menu > li > a:hover, .site-nav .site-navigation .site-menu > li > a.active {
-            color: #ec1e64; }
+            color: #78D54B; }
         .site-nav .site-navigation .site-menu > li.active {
-          color: #ec1e64; }
+          color: #78D54B; }
       .site-nav .site-navigation .site-menu .has-children {
         position: relative; }
         .site-nav .site-navigation .site-menu .has-children > a {
@@ -6450,7 +6450,7 @@
             transition: 0s all;
             color: #000; }
           .site-nav .site-navigation .site-menu .has-children .dropdown .active a {
-            color: #ec1e64 !important; }
+            color: #78D54B !important; }
           .site-nav .site-navigation .site-menu .has-children .dropdown > li {
             list-style: none;
             padding: 0;
@@ -6460,7 +6460,7 @@
               padding: 5px 20px;
               display: block; }
               .site-nav .site-navigation .site-menu .has-children .dropdown > li > a:hover {
-                color: #ec1e64; }
+                color: #78D54B; }
             .site-nav .site-navigation .site-menu .has-children .dropdown > li.has-children > a:before {
               content: "\e315";
               right: 20px; }
@@ -6468,11 +6468,11 @@
               left: 100%;
               top: 0; }
               .site-nav .site-navigation .site-menu .has-children .dropdown > li.has-children > .dropdown li a:hover, .site-nav .site-navigation .site-menu .has-children .dropdown > li.has-children > ul li a:hover {
-                color: #ec1e64; }
+                color: #78D54B; }
             .site-nav .site-navigation .site-menu .has-children .dropdown > li.has-children:hover > a, .site-nav .site-navigation .site-menu .has-children .dropdown > li.has-children:active > a, .site-nav .site-navigation .site-menu .has-children .dropdown > li.has-children:focus > a {
-              color: #ec1e64; }
+              color: #78D54B; }
         .site-nav .site-navigation .site-menu .has-children:hover > a, .site-nav .site-navigation .site-menu .has-children:focus > a, .site-nav .site-navigation .site-menu .has-children:active > a {
-          color: #ec1e64; }
+          color: #78D54B; }
         .site-nav .site-navigation .site-menu .has-children:hover, .site-nav .site-navigation .site-menu .has-children:focus, .site-nav .site-navigation .site-menu .has-children:active {
           cursor: pointer; }
           .site-nav .site-navigation .site-menu .has-children:hover > .dropdown, .site-nav .site-navigation .site-menu .has-children:focus > .dropdown, .site-nav .site-navigation .site-menu .has-children:active > .dropdown {
@@ -6506,7 +6506,7 @@
       .site-nav.scrolled .site-navigation .site-menu li a {
         color: #000; }
         .site-nav.scrolled .site-navigation .site-menu li a.active {
-          color: #ec1e64; }
+          color: #78D54B; }
       .site-nav.scrolled .logo {
         color: #000 !important;
         border-color: #000;
@@ -6606,12 +6606,12 @@
         position: relative;
         color: #000; }
         .site-mobile-menu .site-nav-wrap a:hover {
-          color: #ec1e64; }
+          color: #78D54B; }
       .site-mobile-menu .site-nav-wrap li {
         position: relative;
         display: block; }
         .site-mobile-menu .site-nav-wrap li.active > a {
-          color: #ec1e64; }
+          color: #78D54B; }
       .site-mobile-menu .site-nav-wrap .arrow-collapse {
         position: absolute;
         right: 0px;
@@ -6754,13 +6754,13 @@
     letter-spacing: .1rem;
     text-transform: uppercase; }
     .btn.btn-primary {
-      background-color: #ec1e64;
+      background-color: #78D54B;
       color: #fff;
       border: 2px solid transparent; }
       .btn.btn-primary:hover {
         border: 2px solid transparent;
         background-color: #fff;
-        color: #ec1e64;
+        color: #78D54B;
         -webkit-box-shadow: 0 15px 30px 0 rgba(0, 0, 0, 0.2);
         box-shadow: 0 15px 30px 0 rgba(0, 0, 0, 0.2); }
   
@@ -6769,7 +6769,7 @@
     font-size: 16px;
     height: 45px; }
     .form-control:active, .form-control:focus {
-      border-color: #ec1e64;
+      border-color: #78D54B;
       -webkit-box-shadow: none;
       box-shadow: none; }
   
@@ -6796,7 +6796,7 @@
   .hero {
     background: #fff;
     padding-top: 10rem;
-    padding-bottom: 10rem; }
+    padding-bottom: 2rem; }
     .hero .heading {
       font-size: 80px;
       font-weight: 700; }
@@ -6820,7 +6820,7 @@
       left: 0;
       width: 50px;
       height: 4px;
-      background-color: #ec1e64; }
+      background-color: #78D54B; }
   
   .links-underline li {
     margin-bottom: 4px; }
@@ -6829,13 +6829,13 @@
     text-decoration: underline; }
     .links-underline a:hover {
       text-decoration: none;
-      color: #ec1e64; }
+      color: #78D54B; }
   
   .link-muted {
     color: #888;
     text-decoration: underline; }
     .link-muted:hover {
-      color: #ec1e64;
+      color: #78D54B;
       text-decoration: none; }
   
   .service .thumb, .team .thumb {
@@ -6846,8 +6846,8 @@
     -o-transition: .3s all ease;
     transition: .3s all ease; }
     .service .thumb:hover, .team .thumb:hover {
-      -webkit-box-shadow: 15px 15px 0 0 #ec1e64;
-      box-shadow: 15px 15px 0 0 #ec1e64; }
+      -webkit-box-shadow: 15px 15px 0 0 #78D54B;
+      box-shadow: 15px 15px 0 0 #78D54B; }
   
   .service h3, .service .h3, .team h3, .team .h3 {
     font-size: 20px; }
@@ -6855,7 +6855,7 @@
       text-decoration: underline; }
       .service h3 a:hover, .service .h3 a:hover, .team h3 a:hover, .team .h3 a:hover {
         text-decoration: none;
-        color: #ec1e64; }
+        color: #78D54B; }
   
   .step {
     padding: 30px;
@@ -6864,7 +6864,7 @@
     transition: .3s all ease;
     border: 3px solid #efefef; }
     .step.active, .step:hover, .step:focus {
-      border: 3px solid #ec1e64; }
+      border: 3px solid #78D54B; }
     .step .number {
       font-size: 12px;
       letter-spacing: .2rem;
@@ -6874,7 +6874,7 @@
       color: #999; }
     .step h3, .step .h3 {
       font-size: 18px;
-      color: #ec1e64;
+      color: #78D54B;
       font-weight: 700; }
     .step *:last-child {
       margin-bottom: 0; }
@@ -6891,7 +6891,7 @@
       height: 40px; }
     .client h3, .client .h3 {
       font-size: 18px;
-      color: #ec1e64;
+      color: #78D54B;
       font-weight: 700; }
     .client.active, .client:focus, .client:hover {
       -webkit-box-shadow: 0 15px 30px 0 rgba(0, 0, 0, 0.1);
@@ -6908,12 +6908,12 @@
       font-size: 80px;
       display: block;
       margin-bottom: 30px;
-      color: #ec1e64; }
+      color: #78D54B; }
     .service-2 h3 a, .service-2 .h3 a {
-      color: #ec1e64;
+      color: #78D54B;
       text-decoration: underline; }
       .service-2 h3 a:hover, .service-2 .h3 a:hover {
-        color: #ec1e64;
+        color: #78D54B;
         text-decoration: none; }
   
   .about-image {
@@ -6928,7 +6928,7 @@
       position: relative;
       background: #fff;
       border-radius: 50%;
-      border: 2px solid #ec1e64; }
+      border: 2px solid #78D54B; }
       .social li a:before {
         display: none; }
       .social li a > span {
@@ -6939,7 +6939,7 @@
         -ms-transform: translate(-50%, -50%);
         transform: translate(-50%, -50%); }
       .social li a:hover {
-        background: #ec1e64;
+        background: #78D54B;
         color: #fff; }
   
   .form {
@@ -7021,7 +7021,7 @@
           width: 30px;
           height: 30px;
           border-radius: 50%;
-          background: #ec1e64;
+          background: #78D54B;
           display: inline-block;
           position: relative;
           color: #fff;
@@ -7036,7 +7036,7 @@
             -ms-transform: translate(-50%, -50%);
             transform: translate(-50%, -50%); }
           .site-footer .widget .social li a:hover {
-            background-color: #ec1e64;
+            background-color: #78D54B;
             color: #fff; }
       .site-footer .widget .links li {
         display: block;
