--- a/public/app.css
+++ b/public/app.css
@@ -7105,8 +7105,11 @@
     -o-transition: .3s all ease;
     transition: .3s all ease; }
     .client img {
-      margin-bottom: 30px;
-      height: 40px; }
+      /* margin-bottom: 30px;
+      height: 40px;  */
+      max-width: 100%;
+      height: auto;
+    }
     .client h3, .client .h3 {
       font-size: 18px;
       color: #78D54B;
