--- a/public/app.css
+++ b/public/app.css
@@ -5346,6 +5346,10 @@ body[data-aos-easing="ease-out"] [data-aos] {
   width: 334px;
   height: 223px;
 }
+.title-item {
+  text-decoration: underline;
+  color: #78d54b;
+}
 .glightbox-container {
     width: 100%;
     height: 100%;
